# retail_pipeline

./: CLAUDE.md  README.md  namespace-kube-system.yaml  pyproject.toml  requirements.txt
.astro/: config.yaml  test_dag_integrity_default.py
dags/: dag_create_dataset.py  dag_retail.py  exampledag.py
dbt_retail/: dbt_project.yml
dbt_retail/models/mart/sales_dataset/: dim_datetime.sql  dim_stores.sql  fct_sales.sql
dbt_retail/models/staging/sales_dataset/: features.yml  sales.yml  stg__features.sql  stg__sales.sql  stg__stores.sql  stores.yml
include/: .gitignore
include/dbt_retail/: dbt_project.yml  package-lock.yml  profiles.yml
include/dbt_retail/models/mart/sales_dataset/: fct_sales.sql
include/dbt_retail/models/staging/sales_dataset/: _model_features.yml  _model_sales.yml  sales_dataset.yml  stg__stores.sql
tests/dags/: test_dag_example.py
