[tool.poetry]
name = "retail-pipeline"
version = "0.1.0"
description = ""
authors = ["Levy Marques Nunes <levy.vix@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
dbt-core = "^1.8.4"
dbt-bigquery = "^1.7"
dbt-coves = "^1.8.3"


[mypy-aws_xray_sdk]
ignore_missing_imports = True

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
